unpackaged/objects/Country_metadata__mdt.object
<CustomObject>
  <fields>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Account_Strategy_Summary</fullName>
          <default>true</default>
          <label>Account_Strategy_Summary</label>
        </value>
        <value>
          <fullName>Account_CFE_Summary</fullName>
        </value>
        <value>
          <fullName>Account_Sales_Summary</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Sweden</fullName>
          <default>true</default>
          <label>Sweden</label>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
        <value>
          <fullName>USA</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>LightningComponent__c</fullName>
    <label>Lightning Component</label>
    <referenceTo>Lightning_Component__mdt</referenceTo>
    <relationshipLabel>Country metadata</relationshipLabel>
    <relationshipName>Country_metadata</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
  </fields>
  <fields>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>IMPL</fullName>
          <default>true</default>
          <label>IMPL</label>
        </value>
        <value>
          <fullName>PREV</fullName>
        </value>
        <value>
          <fullName>REST</fullName>
        </value>
        <value>
          <fullName>PROS</fullName>
        </value>
        <value>
          <fullName>ENDO</fullName>
        </value>
        <value>
          <fullName>ORTH</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Team_setup__c</fullName>
    <label>Team setup</label>
    <referenceTo>Team_setup__mdt</referenceTo>
    <relationshipLabel>Country metadata</relationshipLabel>
    <relationshipName>Country_metadata</relationshipName>
    <type>MetadataRelationship</type>
  </fields>
  <fields>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible?</label>
    <type>Checkbox</type>
  </fields>
  <label>Country metadata</label>
  <pluralLabel>Country metadata</pluralLabel>
</CustomObject>